force-app/main/default/objects/BC_Integration_Mapping__mdt/BC_Integration_Mapping__mdt.object-meta.xml
<CustomObject>
    <label>BC Integration Mapping</label>
    <pluralLabel>BC Integration Mappings</pluralLabel>
</CustomObject>