force-app/main/default/objects/BC_Integration_Mapping__mdt/fields/BC_Instance__c.field-meta.xml
<CustomField>
    <fullName>BC_Instance__c</fullName>
    <label>BC Instance</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business_Central_US</fullName>
                <default>true</default>
                <label>Business_Central_US</label>
            </value>
            <value>
                <fullName>Business_Central_CAN</fullName>
            </value>
            <value>
                <fullName>Business_Central_ANZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>