force-app/main/default/objects/BC_Integration_Mapping__mdt/fields/Insert_Only__c.field-meta.xml
<CustomField>
    <fullName>Insert_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Set to true if field should only be sent to Business Central on the initial sync and not continuously updated</inlineHelpText>
    <label>Insert Only</label>
    <type>Checkbox</type>
</CustomField>