force-app/main/default/objects/BC_Integration_Mapping__mdt/fields/JSON_Key__c.field-meta.xml
<CustomField>
    <fullName>JSON_Key__c</fullName>
    <inlineHelpText>Key name in JSON request to which to map the Record Field</inlineHelpText>
    <label>JSON Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>