force-app/main/default/objects/BC_Integration_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Integration_Name__c</columns>
    <columns>BC_Instance__c</columns>
    <columns>JSON_Key__c</columns>
    <columns>Field_API_Name__c</columns>
    <columns>Insert_Only__c</columns>
    <columns>Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>